...

        TextField(
            value = quoteText,
            onValueChange = { quoteText = it },
            label = { Text("Enter a quote") },
            modifier = Modifier.fillMaxWidth()
            .testTag("QuoteInput")

        )

        Spacer(modifier = Modifier.height(16.dp))

        Button(
...
                    Toast.makeText(context, "Quote added!", Toast.LENGTH_SHORT).show()
                    navController.popBackStack()
                } else {
                    Toast.makeText(context, "Please enter a quote.", Toast.LENGTH_SHORT).show()
                }
            },
            modifier = Modifier.fillMaxWidth().testTag("SaveQuoteButton")
        ) {
            Text("Save Quote")
        }
    }
}

