...
            icon = { Icon(Icons.Default.Favorite, contentDescription = null) },
            colors = getNavigationBarColors()
        )
        NavigationBarItem(
            selected = currentRoute == "myQuotes",
            onClick = { if (currentRoute != "myQuotes") navController.navigate("myQuotes") { launchSingleTop = true } },
            label = { Text("My Quotes") },
            icon = { Icon(Icons.Default.Person, contentDescription = null) },
            colors = getNavigationBarColors()
        )
        NavigationBarItem(
            selected = currentRoute == "community",
            onClick = { if (currentRoute != "community") navController.navigate("community") { launchSingleTop = true } },
...
